--- a/Checkpoint 2/resume.html
+++ b/Checkpoint 2/resume.html
@@ -21,14 +21,16 @@
         </div>
     </div>
 
-        <!-- The Header, containing the introduction to the page -->
+        <!-- The Resume page, containing my resume as an iframe pdf -->
+    </div>
     <div class="header">
-        <div class="error">
-            <h1>ERROR 404!</h1>
-            <p>Sorry this page doesn't exist</p>
-            <a href="about.html"><button class="btn1">Learn More</button></a>
+        <div class="header-left2 iframe">
+            <iframe src="images/Kalu-whyte Godson CV.pdf" frameborder="0" class="resume"></iframe>
         </div>
         
+        <div class="header-right">
+            <img src="/Checkpoint 2/pic.jpg" alt="A Picture of Godson Whyte" class="pic">
+        </div>
     </div>
 
 
