--- a/project 2/index.html
+++ b/project 2/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
  <body>   
-
+<!-- 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Delicious Bites</a>
@@ -33,7 +33,7 @@
         </div>
       </nav>
 
-      <img src="images/banner2.jpg" alt="">
+      <img src="images/banner2.jpg" alt=""> -->
 
  <h1>Delicious Bites Menu</h1>
     <h2>Appetizers</h2>  
