--- a/Checkpoint 2/about.html
+++ b/Checkpoint 2/about.html
@@ -22,12 +22,34 @@
     </div>
 
         <!-- The Header, containing the introduction to the page -->
-    <div class="header">
-        <div class="error">
-            <h1>ERROR 404!</h1>
-            <p>Sorry this page doesn't exist</p>
-            <a href="about.html"><button class="btn1">Learn More</button></a>
-        </div>
+    <div class="body">
+        <h1>Sample Videos</h1>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <video src="images/3209828-uhd_3840_2160_25fps.mp4" class="d-block w-100" controls autoplay></video>
+              </div>
+              <div class="carousel-item">
+                <video src="images/4124024-uhd_4096_2160_25fps.mp4" class="d-block w-100" controls autoplay></video>
+              </div>
+              <div class="carousel-item">
+                <video src="images/5532762-uhd_4096_2160_25fps.mp4" class="d-block w-100" controls autoplay></video>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         
     </div>
 
