--- a/Checkpoint 2/index.html
+++ b/Checkpoint 2/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/Checkpoint 2/style.css">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'> -->
 </head>
 <body>
     <!-- The Navigation Bar -->
