--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -8,6 +8,7 @@
 <body>
     
     <button onclick="ret()">Click Me</button>
+    <button onclick="checkScore()">Check Score</button>
 
     <script src="script.js"></script>
     <!-- <script>
